--- a/config.env
+++ b/config.env
@@ -72,8 +72,8 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID =
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
-SERVER_PORT = ""
+BASE_URL_OF_BOT = "https://msmirrorbotz.onrender.com"
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
 
