--- a/config.env
+++ b/config.env
@@ -40,7 +40,7 @@ UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 
 #PM SUPPORT
-BOT_PM = ""
+BOT_PM = "True"
 FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
 
 # Leech
@@ -117,12 +117,12 @@ DRIVEFIRE_CRYPT = ""
 
 # Limits  
 TOTAL_TASKS_LIMIT = "8"
-USER_TASKS_LIMIT = "2"
+USER_TASKS_LIMIT = "3"
 STORAGE_THRESHOLD = ""
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = "4"
 CLONE_LIMIT = "3"
-LEECH_LIMIT = "2"
+LEECH_LIMIT = "5"
 MEGA_LIMIT = "4"
 TIME_GAP = -1        
 
@@ -158,8 +158,8 @@ CAPTION_FONT = ""     # Default Caption of Leeched files, Available Options : b,
 
 # Buttons
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
-SOURCE_LINK = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
 START_BTN1_NAME = "Master"
 START_BTN1_URL = "https://t.me/MS_NEWONN"
 START_BTN2_NAME = "Support Group"
