--- a/config.env
+++ b/config.env
@@ -56,7 +56,7 @@ LINK_LOGS =
 
 #Other
 TG_SPLIT_SIZE = ""
-AS_DOCUMENT = ""
+AS_DOCUMENT = "True"
 EQUAL_SPLITS = ""
 TIMEZONE = "Asia/Kolkata"
 
@@ -91,9 +91,9 @@ YT_COOKIES_URL = ""
 NETRC_URL = ""
 
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "fd5HTBrA"
+MEGA_EMAIL_ID = "mikok79979@orlydns.com"
+MEGA_PASSWORD = "mikok79979@orlydns.com"
 
 # Shortener
 SHORTENER = ""
@@ -132,11 +132,11 @@ FINISHED_PROGRESS_STR = '●' # '■'
 UN_FINISHED_PROGRESS_STR = '○' # '□'
 
 # THEME
-EMOJI_THEME = ""      #Default is False
+EMOJI_THEME = "True"      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
 
 #VIEW STYLE
-TELEGRAPH_STYLE = ""     #Default is False
+TELEGRAPH_STYLE = "True"     #Default is False
 
 #BRANDING
 CREDIT_NAME = "@MS_LinkZzzz" 
@@ -152,8 +152,8 @@ PIXABAY_SEARCH = ""     # Put Keyword to Download Images from Pixabay.com Limit 
 
 
 #FONT STYLE
-NAME_FONT = ""        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
-CAPTION_FONT = ""     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "i"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 
 # Buttons
