--- a/config.env
+++ b/config.env
@@ -158,7 +158,7 @@ CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b
 
 # Buttons
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = "True"
+VIEW_LINK = ""
 SOURCE_LINK = "True"
 START_BTN1_NAME = "Master"
 START_BTN1_URL = "https://t.me/MS_NEWONN"
