--- a/config.env
+++ b/config.env
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID =
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://msmirrorbotz.onrender.com"
+BASE_URL_OF_BOT = "https://max2-0.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
