--- a/config.env
+++ b/config.env
@@ -68,8 +68,8 @@ GD_INFO = ""
 
 # Force Sub Channel
 FSUB = ""
-CHANNEL_USERNAME = ""
-FSUB_CHANNEL_ID =
+CHANNEL_USERNAME = "MS_LinkZzzz"
+FSUB_CHANNEL_ID = "-1001860681918"
 
 # qBittorrent
 BASE_URL_OF_BOT = "https://max2-0.onrender.com"
