--- a/config.env
+++ b/config.env
@@ -67,7 +67,7 @@ AUTHOR_URL = ""
 GD_INFO = ""
 
 # Force Sub Channel
-FSUB = ""
+FSUB = "True"
 CHANNEL_USERNAME = "MS_LinkZzzz"
 FSUB_CHANNEL_ID = "-1001860681918"
 
