--- a/config.env
+++ b/config.env
@@ -100,7 +100,7 @@ SHORTENER = ""
 SHORTENER_API = ""
 
 # GDTOT COOKIE
-CRYPT = ""
+CRYPT = "TG1vVFhGdWlsU0RpL1NRQ1ArdnBhN01pcjFhWVR6bmJkV0pEZXFFYVVSdz0%3D"
 
 # UNIFIED LOGIN (AppDrive, DriveApp, GDFlix, DriveBit, DriveLinks, DriveSharer, DriveAce, DrivePro)
 UNIFIED_EMAIL = ""
