--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ TELEGRAM_API = "12614011"
 TELEGRAM_HASH = "573289a8c3568be33dcec645ca452a36"
 
 # OPTIONAL CONFIG
-DATABASE_URL = "mongodb+srv://max:max@cluster0.c1zuyhu.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://max2:max2@cluster0.9nwficg.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001793499284"
 SUDO_USERS = "5861377019"
 IGNORE_PENDING_REQUESTS = "True"
