--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5984936083:AAGBCGIoYmE7G_235nJdmiL4rTlm-iNszFk"
+BOT_TOKEN = "5588852310:AAFPAMfAvlWe5F5qUYIbk-GibT0UZ1DvCSI"
 GDRIVE_FOLDER_ID = "1Ooib_CwEr51fYYuEb3lrD5wW6eRcFprh"
 OWNER_ID = "5861377019" 
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -11,7 +11,7 @@ TELEGRAM_API = "12614011"
 TELEGRAM_HASH = "573289a8c3568be33dcec645ca452a36"
 
 # OPTIONAL CONFIG
-DATABASE_URL = "mongodb+srv://max2:max2@cluster0.9nwficg.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://flims:flims@cluster0.vaa4txt.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001793499284"
 SUDO_USERS = "5861377019"
 IGNORE_PENDING_REQUESTS = "True"
