--- a/config.env
+++ b/config.env
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = "MS_LinkZzzz"
 FSUB_CHANNEL_ID = "-1001860681918"
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://max2-0.onrender.com"
+BASE_URL_OF_BOT = "https://sevenuehehsh.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
