--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = "https://leechms.jmccode598.workers.dev/0:/Mirrornn"
 STATUS_LIMIT = "2" #recommended value 2
 STOP_DUPLICATE = ""
-CMD_INDEX = ""
+CMD_INDEX = "2"
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = "1200"
 EXTENSION_FILTER = ""
