--- a/config.env
+++ b/config.env
@@ -1,15 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# RECOMMNED SETUP 
-## Setup only Required Config & DATABASE_URL
-## Rest of variable can be setup using BOT by /bsetting command
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5815384426:AAFeK65yyU9el8iAnQZi_P92kBWgIAMMGZ0"
+OWNER_ID = "1426588906"
+TELEGRAM_API = "10261086"
+TELEGRAM_HASH = "9195dc0591fbdb22b5711bcd1f437dab"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
@@ -17,7 +10,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://hulk1:hulk1@cluster0.3xtp3aq.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
