--- a/config.env
+++ b/config.env
@@ -17,7 +17,7 @@ IGNORE_PENDING_REQUESTS = ""
 IS_TEAM_DRIVE = ""
 USE_SERVICE_ACCOUNTS = ""
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
+INDEX_URL = "https://hs.hsbotzzz.workers.dev/"                                        # Not end with /
 STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""
