--- a/config.env
+++ b/config.env
@@ -75,7 +75,7 @@ GD_INFO = ""
 FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
-BASE_URL = ""
+BASE_URL = "https://ihdj.onrender.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
