--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ TELEGRAM_API = "10261086"
 TELEGRAM_HASH = "9195dc0591fbdb22b5711bcd1f437dab"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "1q7XOySIonFpiXUB8TFgIUVsD-ly4R9ZW"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
